Added Code For Button-V1 and Jumbotron-V2
Added components:
1) Button Version 1
2) Jumbotron Version 2

--- a/home.html
+++ b/home.html
@@ -126,5 +126,10 @@
             <img src = "bulb.jpg" alt = "picture of a bulb">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras libero nibh, pretium porttitor arcu id, bibendum convallis tellus. Nunc placerat quam ex, id dictum libero rutrum id. Aliquam aliquam lectus quam, id volutpat urna laoreet aliquet. Mauris suscipit turpis sed dui sollicitudin aliquet. Proin ac dui libero. Nullam auctor rutrum magna, nec dictum est dictum eget. Mauris faucibus eget neque et luctus. Curabitur pretium nibh orci, in malesuada lacus cursus finibus. Proin dolor erat, feugiat non ultrices quis, aliquet at metus.
         </div>
+
+        <div class = "jumbotron img-right">
+            <img src = "bulb.jpg" alt = "picture of a bulb">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras libero nibh, pretium porttitor arcu id, bibendum convallis tellus. Nunc placerat quam ex, id dictum libero rutrum id. Aliquam aliquam lectus quam, id volutpat urna laoreet aliquet. Mauris suscipit turpis sed dui sollicitudin aliquet. Proin ac dui libero. Nullam auctor rutrum magna, nec dictum est dictum eget. Mauris faucibus eget neque et luctus. Curabitur pretium nibh orci, in malesuada lacus cursus finibus. Proin dolor erat, feugiat non ultrices quis, aliquet at metus.
+        </div>
     </body>
 </html>
