--- a/button.html
+++ b/button.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
+    <link href="https://fonts.googleapis.com/css?family=Lato:300i|Open+Sans|Oswald:400,500|Roboto:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="button.css">
 </head>
  <body>
