--- a/navbar.html
+++ b/navbar.html
@@ -5,8 +5,9 @@
     </head>
     <body>
         <div id = "navBarDiv"> 
+            <img alt = "GoalKeeperLogo" src="gk_logo.png" id="logo"></img>
             <ul id = "navBarList">
-                <li class = "navBarItem altSize"><img alt = "GoalKeeperLogo"></img></li>
+                <li class = "navBarItem element"></li>
                 <span class = "vl"><li class = "navBarItem element"><a href = "#">Home</a></li></span>
       <span class = "vl"><li class = "navBarItem element"><a href = "#">About Us</a></li></span>
                 <li class = "navBarItem element"><a href = "#">FAQ</a></li>
