--- a/faq.html
+++ b/faq.html
@@ -58,8 +58,8 @@
         #heading{
             color:black;
             padding:20px;
-            width:100%;
-            margin-left: 30%;
+            width:50%;
+            margin-left: 25%;
 
         }
         hr{
@@ -95,7 +95,7 @@
         </div>
         <div id="head_space"></div>
     <div id="heading">
-    <b>Frequently Asked Questions</b>
+    <center><b>Frequently Asked Questions</b></center>
     </div>
 
     <hr>
