fixed logo issue in about_us.html

--- a/about_us.html
+++ b/about_us.html
@@ -136,7 +136,7 @@
     <div id="head_space"></div>
     <div id="head_image">
         <center>
-        <img id ="logo" src="gk_logo.png"></img>
+        <img id ="" src="gk_logo.png"></img>
         </center>
     </div>
     <div class=box></div>
