added password show feature for the textboxes

--- a/footer/footer.html
+++ b/footer/footer.html
@@ -11,7 +11,7 @@
 			<h2>Social</h2>
 			<ul>
 				<li>
-                        <blockquote class="twitter-tweet"><p lang="en" dir="ltr">I wonder if the Batmobile has cup holders <a href="https://t.co/OuJ58AoCvC">pic.twitter.com/OuJ58AoCvC</a></p>&mdash; Neil deGrasse Tyson (@neiltyson) <a href="https://twitter.com/neiltyson/status/1193344382998654978?ref_src=twsrc%5Etfw">November 10, 2019</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                        <blockquote class="twitter-tweet"><p lang="en" dir="ltr">The future of managing your Goals and Habits is coming soon.... <a href="https://twitter.com/hashtag/GoalKeeper?src=hash&amp;ref_src=twsrc%5Etfw">#GoalKeeper</a></p>&mdash; Rishit Chs (@Rishit_C) <a href="https://twitter.com/Rishit_C/status/1193597000593207296?ref_src=twsrc%5Etfw">November 10, 2019</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 				</li>
 			</ul>
 		</div>
