--- a/textBox.html
+++ b/textBox.html
@@ -17,10 +17,10 @@
     <br/>
     <input type="text" class="rounded large"></input>
     <div class="comboBtn">
-            <input type="text" class="rounded large" id="controlBox"></input>
+            <input type="password" class="rounded large" id="controlBox"></input>
             <br/>
-            <p id="clearText" class="sideBorder">Clear</p>
-            <p id="clearText">Show</p>
+            <p id="clear" class="sideBorder clearText">Clear</p>
+            <p id="show" class="clearText">Show</p>
     </div>
     <script src="textBox.js"></script>
   </body>
