add_goal and faq modifications

--- a/faq.html
+++ b/faq.html
@@ -11,7 +11,7 @@
             padding:0;
             list-style: none;
             text-decoration: none;
-            font-size:20px;
+            
             font-family: 'Ubuntu', sans-serif;
         }
         .question{
@@ -23,7 +23,7 @@
             text-align: left;
             border: none;
             outline: none;
-            font-size:20px;
+            font-size:25px;
             font-family: 'Ubuntu', sans-serif;
         }
         .question:hover{
@@ -51,15 +51,18 @@
             background-color: white;
             color: black;
             display: none;
+            font-size: 22.5px;
         }
         .q{
             color:black;
+            font-size:30px;
         }
         #heading{
             color:black;
             padding:20px;
             width:50%;
             margin-left: 25%;
+            font-size:35px;
 
         }
         hr{
@@ -73,7 +76,10 @@
             
         }
         #head_space{
-            height:40px
+            height:60px
+        }
+        #active{
+            cursor:default;
         }
 
 
