--- a/about_us.html
+++ b/about_us.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
     <title>
-        GoalKeeper About Us
+        GK ABout Us
     </title>
     
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,500&display=swap" rel="stylesheet">
