Few changes to everything

--- a/add_habits.html
+++ b/add_habits.html
@@ -86,10 +86,10 @@
             <div class="box"></div>
             <form>
                 <center>Title Of Habit</center><br>  
-                <center><input type="text" name="title"></center>
+                <center><input type="text" name="title" placeholder="Enter Title Here"></center>
                 <div class="box"></div>
-                <center>Enter The Description<br></center>
-                <center><textarea name="description" rows="10" columns="30"></textarea></center>
+                <center>Enter The Description</center> <br>
+                <center><textarea name="description" rows="10" columns="30" placeholder="Enter Description Here"></textarea></center>
                 <div class="box"></div>
                 <center>How Often?</center><br>
                 <center><input type="radio" class="rleft" name="time_period" value="Daily" checked>Daily</center><br>
