Modified Add Habit

--- a/about_us.html
+++ b/about_us.html
@@ -40,7 +40,7 @@
             align-content: center;
         }
 
-        #logo{
+        #logo_head{
             height: 200px;
             width: 200px;
             align-content: center;
@@ -130,7 +130,7 @@
     <div id="head_space"></div> <!--To keep space b/w nav bar and the image-->
     <div id="head_image">
         <center>
-        <img id ="logo" src="gk_logo.png"></img>
+        <img id ="logo_head" src="gk_logo.png"></img>
         </center>
     </div>
     <div class=box></div>
