FAQ's added and Add_Habits

--- a/add_habits.html
+++ b/add_habits.html
@@ -88,14 +88,11 @@
                 <center>Title Of Habit</center><br>  
                 <center><input type="text" name="title" placeholder="Enter Title Here"></center>
                 <div class="box"></div>
-                <center>Enter The Description</center> <br>
+                <center>Enter The Description</center>
                 <center><textarea name="description" rows="10" columns="30" placeholder="Enter Description Here"></textarea></center>
                 <div class="box"></div>
                 <center>How Often?</center><br>
-                <center><input type="radio" class="rleft" name="time_period" value="Daily" checked>Daily</center><br>
-                <center><input type="radio" class="rright" name="time_period" value="Weekly">Weekly</center><br>
-                <center><input type="radio" class="rleft" name="time_period" value="Biweekly">Biweekly</center><br>
-                <center><input type="radio" class="rright" name="time_period" value="Monthly">Monthly</center><br>
+                
                 <center> Reminders?</center><br>
                 <center><input type="radio" class="rleft" name="reminder" value="Yes" checked>Yes</center><br>
                 <center><input type="radio" class="rright" name="reminder" value="No">No</center><br>
