--- a/about_us.html
+++ b/about_us.html
@@ -123,7 +123,7 @@
             <li class = "navBarItem element"><a href = "faq.html">FAQ</a></li>
             <span class = "rightSide">
             <li class = "navBarItem sign"><a href = "#">Sign Up</a></li>
-            <li class = "navBarItem sign"><a href = "#">Sign In</a></li>
+            <li class = "navBarItem sign"><a href = "signin.html">Sign In</a></li>
             </span>
             </ul>
     </div> <!-- Component Code-->
