--- a/faq.html
+++ b/faq.html
@@ -94,7 +94,7 @@
                 <li class = "navBarItem element"><a href = "#"  id="active">FAQ</a></li>
                 <span class = "rightSide">
                 <li class = "navBarItem sign"><a href = "#">Sign Up</a></li>
-                <li class = "navBarItem sign"><a href = "#">Sign In</a></li>
+                <li class = "navBarItem sign"><a href = "signin.html">Sign In</a></li>
                 </span>
                 </ul>
         </div>
