--- a/signin.html
+++ b/signin.html
@@ -47,7 +47,7 @@
                     <input type="submit" value="SIGN IN"/>
                 </div>
                 <div class="right_box">
-                    <button class="google"> <span id="bcolor">Log In With Google</span></button>
+                    <button class="google"> Log In With Google</button>
                     <button class="facebook"> Log In With Facebook </button>
                     <button class="twitter"> Log In With Twitter </button>
                 </div>
