clear and show in signin

--- a/signin.html
+++ b/signin.html
@@ -43,7 +43,16 @@
                     <h1> SIGN IN </h1>
                     <input type="text" placeholder="Username" name="username"/>
                     <input type="text" placeholder="Email ID" name="email"/>
-                    <input type="password" placeholder="Password" name="password"/>
+                    <div class="comboBtn">
+                        <input type="password" placeholder="Password" class="rounded large" id="controlBox"></input>
+                        <p id="clear" class="sideBorder clearText">Clear</p>
+                        <p id="show" class="clearText">Show</p>
+                    </div>
+                    <script src="textBox.js"></script>
+                    <br/>
+                    <br/>
+                    <br/>
+                    <br/> 
                     <input type="submit" value="SIGN IN"/>
                 </div>
                 <div class="right_box">
