Final Changes For The Day

--- a/signin.html
+++ b/signin.html
@@ -20,9 +20,9 @@
         </span>
         </ul>
 </div> <!-- Component Code-->
-<!-- Need to prepare clear show remember me and outline design of the page-->
+></div>
+   <!-- Need to prepare clear show remember me and outline design of the page-->
     <div id="headspace"></div>
-   
     <center>
     <span class = "cards">
         <span class = "cardImg"><i class="fab fa-angrycreative fa-10x"></i></span>
