medals and dashboard-bootstrap-alpha

--- a/add_medals.html
+++ b/add_medals.html
@@ -83,6 +83,10 @@ button {
     left: 42em;
     margin: 2em 0em;
 }
+
+body {
+  font-family: 'Roboto', sans-serif;
+}
       </style>
     </head>
     <body>
@@ -117,8 +121,7 @@ button {
               </div>-
 
               <div class="helper"></div>
- 
-              <hr id = "divider">
+
               <br>
    <h1>Medals you are yet achieved</h1>    
    <div class="snip">
@@ -165,7 +168,6 @@ button {
         <br>
         <div class = "desc">You have levelled up!<br>You were able to<br>meet your 1<sup>st</sup> 5 goals successfully.<br> Great Job!</div>
 </div>
-
 
 <h1>Medals you are yet achieved</h1>
         <div class="snip">
