added links between pages

--- a/signin.html
+++ b/signin.html
@@ -12,11 +12,11 @@
         <ul id = "navBarList">
         <li class = "navBarItem altSize"><img alt = "GoalKeeperLogo"></img></li>
         <span class = "vl"><li class = "navBarItem element"><a href = "#">Home</a></li></span>
-        <span class = "vl"><li class = "navBarItem element"><a href = "add_goal.html">Add Goal</a></li></span>
-        <span class = "vl"><li class = "navBarItem element" ><a href = "#" id="active">About Us</a></li></span>
+        
+        <span class = "vl"><li class = "navBarItem element" ><a href = "#">About Us</a></li></span>
         <li class = "navBarItem element"><a href = "faq.html">FAQ</a></li>
         <span class = "rightSide">
-        <li class = "navBarItem sign"><a href = "#">Sign Up</a></li>
+        <li class = "navBarItem sign"><a href = "signup.html">Sign Up</a></li>
         </span>
         </ul>
 </div> <!-- Component Code-->
