--- a/about_us.html
+++ b/about_us.html
@@ -122,7 +122,7 @@
             <span class = "vl"><li class = "navBarItem element" ><a href = "#" id="active">About Us</a></li></span>
             <li class = "navBarItem element"><a href = "faq.html">FAQ</a></li>
             <span class = "rightSide">
-            <li class = "navBarItem sign"><a href = "#">Sign Up</a></li>
+            <li class = "navBarItem sign"><a href = "signup.html">Sign Up</a></li>
             <li class = "navBarItem sign"><a href = "signin.html">Sign In</a></li>
             </span>
             </ul>
