--- a/add_goal.html
+++ b/add_goal.html
@@ -66,7 +66,7 @@
                     </span><li class = "navBarItem element"><a href = "faq.html">FAQ</a></li>
                     <span class = "rightSide">
                     <!--<li class = "navBarItem sign"><a href = "#">Sign Up</a></li>-->
-                    <li class = "navBarItem sign"><a href = "#">Sign Out</a></li>
+                    <li class = "navBarItem sign"><a href = "signin.html">Sign Out</a></li>
                     </span>
                     </ul>
             </div>
