--- a/add_habits.html
+++ b/add_habits.html
@@ -70,11 +70,11 @@
                     <ul id = "navBarList">
                     <li class = "navBarItem altSize"><img alt = "GoalKeeperLogo"></img></li>
                     <span class = "vl"><li class = "navBarItem element"><a href = "#">Home</a></li></span>
-                    <span class = "vl"><li class = "navBarItem element" ><a href = "#" id="active">Add Goal</a></li></span>
+                    <span class = "vl"><li class = "navBarItem element" ><a href = "#" id="active">Add Habit</a></li></span>
                     <span class = "vl"><li class = "navBarItem element" ><a href = "about_us.html">About Us</a></li></span>
                     </span><li class = "navBarItem element"><a href = "faq.html">FAQ</a></li>
                     <span class = "rightSide">
-                    <li class = "navBarItem sign"><a href = "#">Sign Out</a></li>
+                    <li class = "navBarItem sign"><a href = "signin.html">Sign Out</a></li>
                     </span>
                     </ul>
             </div>
