--- a/faq.html
+++ b/faq.html
@@ -93,7 +93,7 @@
                 <span class = "vl"><li class = "navBarItem element"><a href = "about_us.html">About Us</a></li></span>
                 <li class = "navBarItem element"><a href = "#"  id="active">FAQ</a></li>
                 <span class = "rightSide">
-                <li class = "navBarItem sign"><a href = "#">Sign Up</a></li>
+                <li class = "navBarItem sign"><a href = "signup.html">Sign Up</a></li>
                 <li class = "navBarItem sign"><a href = "signin.html">Sign In</a></li>
                 </span>
                 </ul>
