--- a/signup.html
+++ b/signup.html
@@ -12,10 +12,10 @@
         <ul id = "navBarList">
         <li class = "navBarItem altSize"><img alt = "GoalKeeperLogo"></img></li>
         <span class = "vl"><li class = "navBarItem element"><a href = "#">Home</a></li></span>
-        <span class = "vl"><li class = "navBarItem element" ><a href = "#" id="active">About Us</a></li></span>
+        <span class = "vl"><li class = "navBarItem element" ><a href = "about_us.html">About Us</a></li></span>
         <li class = "navBarItem element"><a href = "faq.html">FAQ</a></li>
         <span class = "rightSide">
-        <li class = "navBarItem sign"><a href = "#">Sign In</a></li>
+        <li class = "navBarItem sign"><a href = "signin.html">Sign In</a></li>
         </span>
         </ul>
     </div>  
