dashboard using bootstrap fixed minor bug

--- a/dashboard.html
+++ b/dashboard.html
@@ -192,7 +192,7 @@
                             <img src="cardsImgs/meeting.jpg" class="card-img-top" alt="Ace That Meeting">
                             <div class="card-body">
                               <h5 class="card-title">Ace that Meeting</h5>
-                              <p class="card-text">Convey my points clearly & accurately in tomorrow's<br/><b>Web Technologies - I</b> presentation.Collect constructive feedback and work according it.</p>
+                              <p class="card-text">Convey my points clearly & accurately in today's<br/><b>Web Technologies - I</b> presentation.Collect constructive feedback and work according it.</p>
                               <button type="button" class="btn btn-success">Explore Goal</button>
                               <button type="button" class="btn btn-danger match" style="float: right;" id="btn-d-5">Delete</button>
                             </div>
