added navbar logo to signin and signup

--- a/signin.html
+++ b/signin.html
@@ -6,11 +6,19 @@
     <link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet"> <!--For embedding font Ubuntu-->
     <link rel="stylesheet" href="navbar.css"> <!-- For the navigation bar-->
     <link rel = "stylesheet" href = "signin_card.css">
+    <style>
+         #navBarList {
+        height: 1.5em;
+        margin-left: 2em;
+        padding-top: 0.35em;
+        }
+    </style>
 </head>
 <body>
     <div id = "navBarDiv"> 
+            <img alt = "GoalKeeperLogo" src="gk_logo.png" id="logo"></img>
         <ul id = "navBarList">
-        <li class = "navBarItem altSize"><img alt = "GoalKeeperLogo"></img></li>
+        <!--<li class = "navBarItem altSize"><img alt = "GoalKeeperLogo"></img></li>-->
         <span class = "vl"><li class = "navBarItem element"><a href = "#">Home</a></li></span>
         
         <span class = "vl"><li class = "navBarItem element" ><a href = "#">About Us</a></li></span>
