--- a/signup.html
+++ b/signup.html
@@ -6,11 +6,19 @@
     <link rel="stylesheet" type="text/css" href="signup_style.css">
     <link rel="stylesheet" href="navbar.css"> <!-- For the navigation bar-->
     <link rel = "stylesheet" href = "signup_card.css">
+    <style>
+         #navBarList {
+        height: 1.5em;
+        margin-left: 2em;
+        padding-top: 0.35em;
+        }
+    </style>
 </head>
 <body>
     <div id = "navBarDiv"> 
+        <img alt = "GoalKeeperLogo" src="gk_logo.png" id="logo"></img>
         <ul id = "navBarList">
-        <li class = "navBarItem altSize"><img alt = "GoalKeeperLogo"></img></li>
+        <!--<li class = "navBarItem altSize"><img alt = "GoalKeeperLogo"></img></li>-->
         <span class = "vl"><li class = "navBarItem element"><a href = "#">Home</a></li></span>
         <span class = "vl"><li class = "navBarItem element" ><a href = "about_us.html">About Us</a></li></span>
         <li class = "navBarItem element"><a href = "faq.html">FAQ</a></li>
