--- a/footer/footer.html
+++ b/footer/footer.html
@@ -2,7 +2,8 @@
 <html>
 <head>
   <link href="https://fonts.googleapis.com/css?family=Lato:300i|Open+Sans|Oswald:400,500|Roboto:400,700&display=swap" rel="stylesheet">
-    <link rel = "stylesheet" href="footer.css">
+	<link rel = "stylesheet" href="button.css">
+	<link rel = "stylesheet" href="footer.css">
 </head>
 
 <body>
@@ -37,6 +38,7 @@
 				<li>
 					<span href="#">We would love to hear from you,<br/>Please enter your details below<br/>and we will get in touch with you at<br/>the earliest.</span>
 				</li>
+				<br/>
 				<li>
 					<span class = "field">Email ID</span>
           <div class="comboBtn">
@@ -48,7 +50,6 @@
 				</li>
   
 				<li>
-          <br/>
           <form action = "" method="get">
 					<span class = "field">Message</span>
           <div class="comboBtn">
