Added links between pages and changed home page

--- a/add_goal.html
+++ b/add_goal.html
@@ -110,7 +110,7 @@
                     <ul id = "navBarList">
                     <!--<li class = "navBarItem altSize"><img alt = "GoalKeeperLogo" src="gk_logo.png" id="logo"></img></li>-->
                     
-                    <span class = "vl"><li class = "navBarItem element"><a href = "#">Home</a></li></span>
+                    <span class = "vl"><li class = "navBarItem element"><a href = "home.html">Home</a></li></span>
                     <span class = "vl"><li class = "navBarItem element" ><a href = "#" id="active">Add Goal</a></li></span>
                     <span class = "vl"><li class = "navBarItem element" ><a href = "about_us.html">About Us</a></li></span>
                     </span><li class = "navBarItem element"><a href = "faq.html">FAQ</a></li>
