--- a/add_medals.html
+++ b/add_medals.html
@@ -96,26 +96,26 @@ body {
             <ul id = "navBarList" style="text-align: center; margin-left: 5em; cursor: default;">
                     <li class = "navBarItem element">Medals Gallery</li></span>
                 <span class = "rightSide">
-                  <li class = "navBarItem sign"><a href = "#">Sign Out</a></li>
+                  <li class = "navBarItem sign"><a href = "signin.html">Sign Out</a></li>
                 </span>
             </ul>
         </div>
 
         <div class="sidenav">
-                <span href="#about">Your Dashboard</span>
-                <a href="#services">Add Goal</a>
-                <a href="#clients">Add Habits</a>
-                <a href="#clients">My Goals & Habits</a>
+                <span href="#">Your Dashboard</span>
+                <a href="add_goal.html">Add Goal</a>
+                <a href="add_habits.html">Add Habits</a>
+                <a href="dashboard.html">My Goals & Habits</a>
                 <a href="#clients">Statistics & Analysis</a>
-                <a href="#clients">Achievements</a>
+                <a href="dashboard.html">Achievements</a>
                 <a href="#contact">Forums</a>
                 <button class="dropdown-btn" style="cursor: help;">Tips 
                   <i class="fa fa-caret-down"></i>
                 </button>
                 <div class="dropdown-container">
-                  <a href="#">Goal Builder</a>
-                  <a href="#">Habit Generator</a>
-                  <a href="#">News</a>
+                  <a href="add_goal.html">Goal Builder</a>
+                  <a href="add_habits.html">Habit Generator</a>
+                  <a href="about_us.html">News</a>
                 </div>
                 <a href="#contact">Profile</a>
               </div>-
