Few modifications caused by hosting

--- a/add_habits.html
+++ b/add_habits.html
@@ -108,7 +108,7 @@
                     <img alt = "GoalKeeperLogo" src="gk_logo.png" id="logo"></img>
                     <ul id = "navBarList">
                     <!--<li class = "navBarItem altSize"><img alt = "GoalKeeperLogo"></img></li>-->
-                    <span class = "vl"><li class = "navBarItem element"><a href = "home.html">Home</a></li></span>
+                    <span class = "vl"><li class = "navBarItem element"><a href = "index.html">Home</a></li></span>
                     <span class = "vl"><li class = "navBarItem element" ><a href = "#" id="active">Add Habit</a></li></span>
                     <span class = "vl"><li class = "navBarItem element" ><a href = "about_us.html">About Us</a></li></span>
                     </span><li class = "navBarItem element"><a href = "faq.html">FAQ</a></li>
