--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Elements</title>
+        <title>Home</title>
         <link rel = "stylesheet" href = "carousel.css">
         <link rel = "stylesheet" href = "cards.css">
         <link rel = "stylesheet" href = "cardsGrid.css">
