--- a/signin.html
+++ b/signin.html
@@ -19,7 +19,7 @@
             <img alt = "GoalKeeperLogo" src="gk_logo.png" id="logo"></img>
         <ul id = "navBarList">
         <!--<li class = "navBarItem altSize"><img alt = "GoalKeeperLogo"></img></li>-->
-        <span class = "vl"><li class = "navBarItem element"><a href = "#">Home</a></li></span>
+        <span class = "vl"><li class = "navBarItem element"><a href = "index.html">Home</a></li></span>
         
         <span class = "vl"><li class = "navBarItem element" ><a href = "#">About Us</a></li></span>
         <li class = "navBarItem element"><a href = "faq.html">FAQ</a></li>
