changes to home page and more

--- a/faq.html
+++ b/faq.html
@@ -6,6 +6,7 @@
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,500&display=swap" rel="stylesheet">
       <link rel="stylesheet" href="navbar.css">
       <link rel="stylesheet" href="footer/footer.css">
+      <link rel="stylesheet" href="button.css">
     <style>
          *{
             margin:0;
@@ -143,7 +144,7 @@
         One needs to set as to how often he would like to repeat his/her habits.<br>Based on this all the necessary tracking will take place and the user would be reminded at regular intervals.
     </div>
     <hr>
-    <button class="question"><span class="q">Q.</span> Are there any rewards for accomplashing tasks?</button>
+    <button class="question"><span class="q">Q.</span> Are there any rewards for accomplishing tasks?</button>
     <div class="panel">
         As one keeps completing tasks(goals and habits), he/she gets medals. The medals are awarded as follows:<br>
         <ul>
