--- a/about_us.html
+++ b/about_us.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="navbar.css"> <!-- For the navigation bar-->
     <link rel="stylesheet" href="footer/footer.css">
+    <link rel="stylesheet" href="button.css">
     <script src="jquery-3.4.1.min.js"></script>
 
     <script src="jquery_file.js"></script>
