--- a/add_habits.html
+++ b/add_habits.html
@@ -133,7 +133,7 @@
                             <div class="box"></div>
                             <hr>
                             <div class="box"></div>
-                            <form>
+                            <form action="" method="GET" name="form1">
                                     <center>Title Of Habit</center><br>  
                                     <center><input type="text" name="title" placeholder="Enter Title Here"></center>
                                     <div class="box"></div>
@@ -273,6 +273,24 @@
                     </div>
                 </footer>
                 <script src="footer/footer.js" type="text/javascript"></script>
+                <script>
+                    var x=document.getElementById("btn1");
+                    x.addEventListener("click",check,false);
+                    function check(){
+                     var arr = new Array();
+                        arr[0] = document.forms["form1"]["title"].value;
+                        arr[1] = document.forms["form1"]["description"].value;
+                        
+                        for (var i=0; i<2 ; i++)
+                        {
+                            if (arr[i]=="")
+                            {
+                                alert("You have not filled the text field values! Please fill them");
+                                break;
+                            }
+                        }
+                    }
+                </script>
 
     </body>
 </html>
