changed get to post in form

--- a/add_habits.html
+++ b/add_habits.html
@@ -133,7 +133,7 @@
                             <div class="box"></div>
                             <hr>
                             <div class="box"></div>
-                            <form action="" method="GET" name="form1">
+                            <form action="" method="POST" name="form1">
                                     <center>Title Of Habit</center><br>  
                                     <center><input type="text" name="title" placeholder="Enter Title Here"></center>
                                     <div class="box"></div>
