--- a/signup.html
+++ b/signup.html
@@ -50,13 +50,13 @@
     <form action="" method="POST" name="form1" onsubmit="return check();">   
     <div id="sign_up">
         <div class="left_box">
-            <input type="text" placeholder="First Name" name="username" />
+            <input type="text" placeholder="Username" name="username" />
             <input type="text" placeholder="Email ID" name="email" />
             <input type="text" placeholder="Phone Number" name="number" />
             <input type="text" placeholder="Question" name="question" />
         </div>
         <div class="right_box">
-            <input type="text" placeholder="Last Name" name="name" />
+            <input type="text" placeholder="Name" name="name" />
             <input type="password" placeholder="Password" name="password" />
             <input type="password" placeholder="Confirm Password" name="cpassword" />
             <input type="text" placeholder="Your Answer" name="securityanswer" />
