--- a/add_goal.html
+++ b/add_goal.html
@@ -112,6 +112,9 @@
                     
                     <span class = "vl"><li class = "navBarItem element"><a href = "index.html">Home</a></li></span>
                     <span class = "vl"><li class = "navBarItem element" ><a href = "#" id="active">Add Goal</a></li></span>
+                    <span class = "vl"><li class = "navBarItem element" ><a href = "add_habits.html" >Add Habit</a></li></span>
+                    <span class = "vl"><li class = "navBarItem element" ><a href = "add_medals.html" >Medals</a></li></span>
+                    <span class = "vl"><li class = "navBarItem element" ><a href = "dashboard.html" >Dashboard</a></li></span>
                     <span class = "vl"><li class = "navBarItem element" ><a href = "about_us.html">About Us</a></li></span>
                     </span><li class = "navBarItem element"><a href = "faq.html">FAQ</a></li>
                     <span class = "rightSide">
