--- a/dashboard.html
+++ b/dashboard.html
@@ -111,22 +111,22 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Forums</a>
+              <a class="nav-link" href="about_us.html">About Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Statistics</a>
+              <a class="nav-link" href="faq.html">FAQ</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Medals</a>
+              <a class="nav-link" href="add_medals.html">Medals</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Achievements</a>
+                <a class="nav-link" href="add_goal.html">Add Goal</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">My Targets</a>
+                <a class="nav-link" href="add_habits.html">Add Habit</a>
             </li>
           </ul>
           <span class="navbar-text">
@@ -134,7 +134,7 @@
           </span>
           <form class="form-inline">
             <!-- <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search"> -->
-            <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Sign Out</button>
+            <button class="btn btn-outline-info my-2 my-sm-0" type="submit" ><a href="signin.html">Sign Out</a></button>
           </form>
         </div>
       </nav>
