--- a/signin.html
+++ b/signin.html
@@ -49,6 +49,7 @@
                 <td>
                 <div class="left_box">
                     <h1> SIGN IN </h1>
+                    <form action="" method="POST">
                     <input type="text" placeholder="Username" name="username"/>
                     <input type="text" placeholder="Email ID" name="email"/>
                     <div class="comboBtn">
@@ -56,6 +57,7 @@
                         <p id="clear" class="sideBorder clearText">Clear</p>
                         <p id="show" class="clearText">Show</p>
                     </div>
+                    </form>
                     <script src="textBox.js"></script>
                     <br/>
                     <br/>
