--- a/signup.html
+++ b/signup.html
@@ -45,7 +45,7 @@
         <br/>
         <br/>
         <br/>
-       <span class="cardTitle">SIGN UP</span>
+       <span class="cardTitle" ><b>Sign Up</b></span>
 <!-- Need to prepare clear show remember me and outline design of the page-->
     <form action="" method="POST" name="form1" onsubmit="return check();">   
     <div id="sign_up">
