--- a/about_us.html
+++ b/about_us.html
@@ -142,11 +142,14 @@
             <!--<li class = "navBarItem altSize"><img alt = "GoalKeeperLogo"></img></li>-->
             <span class = "vl"><li class = "navBarItem element"><a href = "index.html">Home</a></li></span>
             <span class = "vl"><li class = "navBarItem element"><a href = "add_goal.html">Add Goal</a></li></span>
+            <span class = "vl"><li class = "navBarItem element" ><a href = "add_habits.html">Add Habit</a></li></span>
+            <span class = "vl"><li class = "navBarItem element" ><a href = "add_medals.html">Medals</a></li></span>
+            <span class = "vl"><li class = "navBarItem element" ><a href = "dashboard.html">Dashboard</a></li></span>
             <span class = "vl"><li class = "navBarItem element" ><a href = "#" id="active">About Us</a></li></span>
             <li class = "navBarItem element"><a href = "faq.html">FAQ</a></li>
             <span class = "rightSide">
-            <li class = "navBarItem sign"><a href = "signup.html">Sign Up</a></li>
-            <li class = "navBarItem sign"><a href = "signin.html">Sign In</a></li>
+            
+            <li class = "navBarItem sign"><a href = "signin.html">Sign Out</a></li>
             </span>
             </ul>
     </div> <!-- Component Code-->
