--- a/add_habits.html
+++ b/add_habits.html
@@ -109,7 +109,10 @@
                     <ul id = "navBarList">
                     <!--<li class = "navBarItem altSize"><img alt = "GoalKeeperLogo"></img></li>-->
                     <span class = "vl"><li class = "navBarItem element"><a href = "index.html">Home</a></li></span>
+                    <span class = "vl"><li class = "navBarItem element" ><a href = "add_goal.html">Add Goal</a></li></span>
                     <span class = "vl"><li class = "navBarItem element" ><a href = "#" id="active">Add Habit</a></li></span>
+                    <span class = "vl"><li class = "navBarItem element" ><a href = "add_medals.html">Medals</a></li></span>
+                    <span class = "vl"><li class = "navBarItem element" ><a href = "dashboard.html">Dashboard</a></li></span>
                     <span class = "vl"><li class = "navBarItem element" ><a href = "about_us.html">About Us</a></li></span>
                     </span><li class = "navBarItem element"><a href = "faq.html">FAQ</a></li>
                     <span class = "rightSide">
