Few changes to html and css

--- a/signin.html
+++ b/signin.html
@@ -21,7 +21,7 @@
         <!--<li class = "navBarItem altSize"><img alt = "GoalKeeperLogo"></img></li>-->
         <span class = "vl"><li class = "navBarItem element"><a href = "index.html">Home</a></li></span>
         
-        <span class = "vl"><li class = "navBarItem element" ><a href = "#">About Us</a></li></span>
+        <span class = "vl"><li class = "navBarItem element" ><a href = "about_us.html">About Us</a></li></span>
         <li class = "navBarItem element"><a href = "faq.html">FAQ</a></li>
         <span class = "rightSide">
         <li class = "navBarItem sign"><a href = "signup.html">Sign Up</a></li>
