--- a/signup.html
+++ b/signup.html
@@ -47,7 +47,7 @@
         <br/>
        <span class="cardTitle">SIGN UP</span>
 <!-- Need to prepare clear show remember me and outline design of the page-->
-    <form action="" method="GET" name="form1">   
+    <form action="" method="POST" name="form1">   
     <div id="sign_up">
         <div class="left_box">
             <input type="text" placeholder="First Name" name="first" />
