--- a/signup.html
+++ b/signup.html
@@ -9,9 +9,7 @@
     <link rel="stylesheet" href="button.css">
 
     <style>
-    
-
-         #navBarList {
+        #navBarList {
         height: 1.5em;
         margin-left: 2em;
         padding-top: 0.35em;
@@ -47,7 +45,7 @@
         <br/>
        <span class="cardTitle" ><b>Sign Up</b></span>
 <!-- Need to prepare clear show remember me and outline design of the page-->
-    <form action="" method="POST" name="form1" onsubmit="return check();">   
+    <form action="" method="POST" name="form1">   
     <div id="sign_up">
         <div class="left_box">
             <input type="text" placeholder="Username" name="username" />
@@ -76,17 +74,15 @@
             arr[4]= document.forms["form1"]["name"].value;
             arr[5] = document.forms["form1"]["password"].value;
             arr[6] = document.forms["form1"]["cpassword"].value;
-            arr[7]= document.forms["form1"]["first"].value;
+            arr[7]= document.forms["form1"]["securityanswer"].value;
             for (var i=0; i<8 ; i++)
             {
                 if (arr[i]=="")
                 {
                     alert("One or more fields missing!");
-                    return false;
                     break;
                 }
             }
-            return true;
         }
     </script>
 </body>
