Added footer partial fix

--- a/add_habits.html
+++ b/add_habits.html
@@ -4,7 +4,7 @@
         <title>
             GoalKeeper Add Habit
         </title>
-        <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,500&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Lato:300i|Open+Sans|Oswald:400,500|Roboto:400,700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="navbar.css">
         <link rel= "stylesheet" href = "labels.css">
         <link rel="stylesheet" href="button.css">
@@ -18,7 +18,7 @@
             list-style: none;
             text-decoration: none;
             
-            font-family: 'Ubuntu', sans-serif;
+            font-family: 'Roboto', sans-serif;
         }
         
         footer {
