--- a/add_medals.html
+++ b/add_medals.html
@@ -6,7 +6,9 @@
       <link rel="stylesheet" href="footer/footer.css">
       <link rel="stylesheet" href="snip.css">
       <link rel = "stylesheet" href = "css/all.css">
-      <style type="text/css">
+	<link rel = "stylesheet" href = "button.css">   
+<style type="text/css">
+
 /* Fixed sidenav, full height */
 .sidenav {
   height: 125%;
@@ -239,7 +241,7 @@ body {
             </form>
       </li>
       <li><input type="submit" id = "btn" value="Success button"  class = "success" value="Submit">
-    <div id="helper"></div></li>
+<!--    <div id="helper"></div></li>-->
     </ul>
         </div>
       <div class = "vl"></div>
