--- a/footer/footer.html
+++ b/footer/footer.html
@@ -65,12 +65,12 @@
 	</div>
   <div class = "vl"></div>
 		<div class="footer__block">
-			<h2>Location</h2>
+			<h2 id="location">Location</h2>
 			<ul>
 				<li>
 					<img src="pes_map.png" height="250" width="250">
                 </li>
-                <li>PES University,<br/>
+                <li id="location">PES University,<br/>
                     100 Feet Ring Road,<br/>
                     BSK III Stage,<br/>
                     Bangalore-560085</li>
