Made changes in the footer and carousel

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="navbar.css"> <!-- For the navigation bar-->
         <link rel="stylesheet" href="footer/footer.css">
         <style>
-            *{
+            *{ /* For everything by default */
             
             font-family: 'Ubuntu', sans-serif;
             }
@@ -66,7 +66,6 @@
                     <ul id = "navBarList">
                     <!--<li class = "navBarItem altSize"><img alt = "GoalKeeperLogo"></img></li>-->
                     <span class = "vl"><li class = "navBarItem element"><a href = "#" id="active">Home</a></li></span>
-                    
                     <span class = "vl"><li class = "navBarItem element" ><a href = "about_us.html">About Us</a></li></span>
                     <li class = "navBarItem element"><a href = "faq.html">FAQ</a></li>
                     <span class = "rightSide">
@@ -82,7 +81,6 @@
             <!-- Full-width images with number and caption text -->
             <div class="mySlides fade">
                 <img src="home_1.jpg" class = "carouseImg">
-                <span class = "credits"><a style="background-color:black;color:white;text-decoration:none;padding:4px 6px;font-family:-apple-system, BlinkMacSystemFont, &quot;San Francisco&quot;, &quot;Helvetica Neue&quot;, Helvetica, Ubuntu, Roboto, Noto, &quot;Segoe UI&quot;, Arial, sans-serif;font-size:12px;font-weight:bold;line-height:1.2;display:inline-block;border-radius:3px" href="https://unsplash.com/@ninjason?utm_medium=referral&amp;utm_campaign=photographer-credit&amp;utm_content=creditBadge" target="_blank" rel="noopener noreferrer" title="Download free do whatever you want high-resolution photos from Jason Leung"><span style="display:inline-block;padding:2px 3px"><svg xmlns="http://www.w3.org/2000/svg" style="height:12px;width:auto;position:relative;vertical-align:middle;top:-2px;fill:white" viewBox="0 0 32 32"><title>unsplash-logo</title><path d="M10 9V0h12v9H10zm12 5h10v18H0V14h10v9h12v-9z"></path></svg></span><span style="display:inline-block;padding:2px 3px">Jason Leung</span></a></span>
                 <div class="text">
                     <span class = "carouselTitleText">Want to keep Track of your Goals?</span>
                     <br/>
@@ -92,7 +90,6 @@
 
             <div class="mySlides fade">
                 <img src="home_2.jpg" class = "carouseImg">
-                <span class = "credits"><a style="background-color:black;color:white;text-decoration:none;padding:4px 6px;font-family:-apple-system, BlinkMacSystemFont, &quot;San Francisco&quot;, &quot;Helvetica Neue&quot;, Helvetica, Ubuntu, Roboto, Noto, &quot;Segoe UI&quot;, Arial, sans-serif;font-size:12px;font-weight:bold;line-height:1.2;display:inline-block;border-radius:3px" href="https://unsplash.com/@socialcut?utm_medium=referral&amp;utm_campaign=photographer-credit&amp;utm_content=creditBadge" target="_blank" rel="noopener noreferrer" title="Download free do whatever you want high-resolution photos from S O C I A L . C U T"><span style="display:inline-block;padding:2px 3px"><svg xmlns="http://www.w3.org/2000/svg" style="height:12px;width:auto;position:relative;vertical-align:middle;top:-2px;fill:white" viewBox="0 0 32 32"><title>unsplash-logo</title><path d="M10 9V0h12v9H10zm12 5h10v18H0V14h10v9h12v-9z"></path></svg></span><span style="display:inline-block;padding:2px 3px">S O C I A L . C U T</span></a></span>
                 <div class="text">
                     <span class = "carouselTitleText">Keep Track of habits as well</span>
                     <br/>
@@ -102,7 +99,6 @@
 
             <div class="mySlides fade">
                 <img src="home_3.jpg" class = "carouseImg">
-                <span class = "credits"><a style="background-color:black;color:white;text-decoration:none;padding:4px 6px;font-family:-apple-system, BlinkMacSystemFont, &quot;San Francisco&quot;, &quot;Helvetica Neue&quot;, Helvetica, Ubuntu, Roboto, Noto, &quot;Segoe UI&quot;, Arial, sans-serif;font-size:12px;font-weight:bold;line-height:1.2;display:inline-block;border-radius:3px" href="https://unsplash.com/@markusspiske?utm_medium=referral&amp;utm_campaign=photographer-credit&amp;utm_content=creditBadge" target="_blank" rel="noopener noreferrer" title="Download free do whatever you want high-resolution photos from Markus Spiske"><span style="display:inline-block;padding:2px 3px"><svg xmlns="http://www.w3.org/2000/svg" style="height:12px;width:auto;position:relative;vertical-align:middle;top:-2px;fill:white" viewBox="0 0 32 32"><title>unsplash-logo</title><path d="M10 9V0h12v9H10zm12 5h10v18H0V14h10v9h12v-9z"></path></svg></span><span style="display:inline-block;padding:2px 3px">Markus Spiske</span></a></span>
                 <div class="text">
                     <span class = "carouselTitleText">Manage your schedule to perfection</span>
                     <br/>
